@@ -76,17 +76,12 @@ class InterChange : private DataText
         std::string resolveText(CommandBlock *getData, bool addValue);
         void testLimits(CommandBlock *getData);
         float returnLimits(CommandBlock *getData);
-        void flagsWrite(unsigned int val){__sync_and_and_fetch(&flagsValue, val);}
         std::atomic<bool> syncWrite;
         std::atomic<bool> lowPrioWrite;
 
         unsigned int tick; // needs to be read by synth
 
     private:
-        unsigned int flagsValue;
-        unsigned int flagsRead(){return __sync_add_and_fetch(&flagsValue, 0);}
-        unsigned int flagsReadClear(){ return __sync_fetch_and_or(&flagsValue, 0xffffffff);}
-
         void *sortResultsThread(void);
         static void *_sortResultsThread(void *arg);
         pthread_t  sortResultsThreadHandle;
